# cpp-AuthServer

./: .gitignore  CMakeLists.txt  README.md
include/: User.h
protos/: auth.proto
src/: AuthClient.cpp  User.cpp  main.cpp
